--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint"
   },
-   "dependencies": {
+  "dependencies": {
+    "axios": "^1.4.0",
     "flowbite": "^1.6.5",
     "flowbite-react": "^0.4.7",
     "next": "13.4.4",
